# Anvesh

./: .env.example  .env.local  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: database.py  main.py
app/db/: __init__.py  database.py
app/routers/: automation.py
app/services/: scraper.py
automation-server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
automation-server/app/: main.py
automation-server/app/db/: __init__.py  api_keys.py  database.py
automation-server/app/helpers/: __init__.py  response.py
automation-server/app/middleware/: auth.py
automation-server/app/models/: api_key.py  automation.py
automation-server/app/routers/: admin.py  automation.py  keys.py
automation-server/app/services/: scraper.py
automation-server/config/: __init__.py  keys.py  settings.py
automation-server/docs/: testing.md
automation-server/docs/api/: automation.md  keys.md  overview.md
automation-server/tests/: conftest.py
automation-server/tests/integration/: test_admin_automation.py  test_automation.py  test_keys.py  test_middleware.py
automation-server/tests/unit/: test_api_keys.py  test_db.py
docs-site/: README.md  landing.html  package.json
docs-site/.source/: browser.ts  server.ts
docs-site/content/docs/: index.mdx  meta.json
docs-site/scripts/: generate-docs.mjs
docs-site/src/: mdx-components.tsx
docs-site/src/app/: global.css  layout.tsx
docs-site/src/lib/: layout.shared.tsx  source.ts
web-portal/: README.md
(+28 files in other folders)
